# neo_docking

./: CMakeLists.txt  LICENSE  README.md  docking.rviz  package.xml
configs/ar_track_alvar/: ar_track_alvar_bundle_27.xml  ar_track_alvar_bundle_36.xml  ar_track_alvar_single.yaml
configs/auto_docking/: auto_docking.yaml  auto_docking_sim.yaml  stations.yaml
configs/rviz/: basic_config.rviz
launch/: ar_track_alvar_bundle.launch  ar_track_alvar_single.launch  auto_docking.launch  auto_docking_mb.launch  auto_docking_sim.launch  dock_with_bundle_marker_sim.launch  dock_with_individual_marker.launch  dock_with_individual_marker_mb.launch  dock_with_individual_marker_sim.launch  preprocessing.launch  realsense.launch  rviz.launch  setup1.launch  setup1_sim.launch  setup2_sim.launch
scripts/auto_docking/: auto_dock.py  auto_dock_mb.py  auto_dock_sim.py  auto_dock_test.py  pose_filter.py
scripts/preprocessing/: pose_filter.py  preprocessing.py
srv/: auto_undocking.srv
